Fix overflow and modal
for small screen

--- a/css/main.css
+++ b/css/main.css
@@ -697,8 +697,10 @@ body,
 }
 
 .team__details {
-  padding: 30px 122px 24px 122px;
+  padding-top: 30px;
+  padding-bottom: 24px;
   font-size: 16px;
+  line-height: 1.18;
   text-align: center;
 }
 
@@ -1001,8 +1003,8 @@ body,
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.2);
   z-index: 20;
   opacity: 1;
@@ -1031,15 +1033,26 @@ body,
   max-height: 609px;
   background-color: #ffffff;
   border-radius: 4px;
-  overflow: scroll;
+  overflow: auto;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 478px) {
+  .modal {
+    width: 100%;
+    max-width: 450px;
+    height: 100%;
+    max-height: 609px;
+    padding: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
     max-height: 581px;
+    overflow: initial;
   }
 }
 
