--- a/sass/components/main-page/modal/_modalBackdrope.scss
+++ b/sass/components/main-page/modal/_modalBackdrope.scss
@@ -3,8 +3,8 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: getMap(bgc-modal);
     z-index: 20;
 
@@ -37,14 +37,23 @@
     max-height: 609px;
     background-color: getMap(primary-bgc);
     border-radius: 4px;
-    overflow: scroll;
+    overflow: auto;
 
     transform: translate(-50%, -50%) scale(1);
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    @media screen and (max-width: $mobile320) {
+        width: 100%;
+        max-width: 450px;
+        height: 100%;
+        max-height: 609px;
+        padding: 30px;
+    }
+
     @media screen and (min-width: $desc) {
         width: 528px;
         max-height: 581px;
+        overflow:initial;
      }
 }
 
